--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,8 @@
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
   <li class="{% if page.url contains '/calendar/' %} active {% endif %}"><a href="{{ "/calendar/" | absolute_url }}">Calendar</a></li>
   <li class="{% if page.url contains '/sponsor/' %} active {% endif %}"><a href="{{ "/sponsor/" | absolute_url }}">Sponsor</a></li>
+  <li class="{% if page.url contains '/ctf/' %} active {% endif %}"><a href="{{ "/ctf/" | absolute_url }}">CTF</a></li>
+</ul>
 </ul>
 
 <ul class="icons">
