--- a/assets/css/noscript.scss
+++ b/assets/css/noscript.scss
@@ -6,7 +6,7 @@
 @import 'libs/functions';
 @import 'libs/mixins';
 @import 'libs/skel';
-@import 'font-awesome.min.css';
+@import 'fontawesome.min.css';
 
 /*
 	Massively by HTML5 UP
