--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,6 @@
+<meta name="robots" content="noindex">
+<meta name="googlebot" content="noindex">
+
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
