--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,6 +7,8 @@
 -->
 <html>
 	<head>
+	<meta name="robots" content="noindex">
+	<meta name="googlebot" content="noindex">
     {% include head.html %}
 
 	</head>
