--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@
 -->
 <html>
 	<head>
+	<meta http-equiv="refresh" content="0; url=https://cyberuci.com/" />
 	<meta name="robots" content="noindex">
 	<meta name="googlebot" content="noindex">
     {% include head.html %}
